FINALLY fixed all the problems so far jesus christ me lord oh mighty 6 hours of just re aranging and re positioning elements good lord but it seems to be pretty stable now might go to sleep or might get stuck into coding some player UI idk

--- a/css/game-styles/character.css
+++ b/css/game-styles/character.css
@@ -1,7 +1,9 @@
 #selectText {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 2;
   color: whitesmoke;
   font-size: 1.5rem;
   margin-bottom: 100px;
@@ -27,6 +29,19 @@
 
 .playerImg:hover {
   filter: drop-shadow(0px 0px 8px whitesmoke);
+}
+
+#portraitsWrapper {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  z-index: 2;
 }
 
 
