--- a/css/global.css
+++ b/css/global.css
@@ -17,13 +17,13 @@ body {
   background-position: center;
   background-color: black;
   image-rendering: pixelated;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 #introContainer {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   opacity: 0;
   transition: opacity 1s ease-in;
   width: 800px;
@@ -37,6 +37,10 @@ body {
 }
 
 #introContainerTwo {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   opacity: 0;
   transition: opacity 1s ease-in;
   width: 800px;
@@ -65,18 +69,87 @@ body {
 }
 
 #backgroundImg {
+  display: block;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 1350px;
   height: auto;
   image-rendering: pixelated;
+  pointer-events: none;
 }
 
 #background {
-  position: relative;
+  display: block;
+  position: absolute;
   height: 100vh;
   width: 100vw;
   background-color: black;
   overflow: hidden;
+  z-index: 0;
+  pointer-events: none;
 }
 
+#background.hidden {
+  display: none;
+}
 
+#startMenu {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  z-index: 1;
+}
+
+#mainTitle {
+  text-align: center;
+  width: max-content;
+  font-family: "Press Start 2P", sans-serif;
+  font-size: 5rem;
+  text-shadow: 0px 0px 25px cyan;
+  color: whitesmoke;
+  user-select: none;
+}
+
+#copyRight {
+  width: max-content;
+  font-size: 1.3rem;
+  color: white;
+  user-select: none;
+}
+
+.fade-out {
+  opacity: 0;
+  transition: 2s ease;
+}
+
+#mainMenu {
+  position: fixed;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  gap: 40px;
+  border: none;
+  background: transparent;
+  z-index: 1;
+}
+
+#settingsModal {
+  display: none;
+}
+
+.hidden {
+  display: none;
+}
 
