--- a/css/modal.css
+++ b/css/modal.css
@@ -12,4 +12,5 @@
   backdrop-filter: blur(20px);
   background-color: rgba(0, 0, 0, 0.300);
   box-shadow: 0px 0px 8px whitesmoke;
+  z-index: 1;
 }
